# workshop_rust_2022

./: .gitignore
ws_01_intro/: Cargo.toml
ws_01_intro/json/: greeting.json  greeting_len.json  greeting_len_nasty.json
ws_01_intro/src/: main.rs
ws_async/: Cargo.toml
ws_async/src/: main.rs
ws_async/tests/: async.rs  many.rs  threads.rs
ws_db/: Cargo.toml  init.sql  people.db
ws_db/json/: yoda.json
ws_db/src/: db.rs  main.rs  model.rs
ws_diesel/: .env  Cargo.toml  README.md  person.db
ws_diesel/migrations/2022-05-05-120153_init/: up.sql
ws_diesel/src/: db.rs  main.rs  model.rs  schema.rs
